--- a/frontend.yml
+++ b/frontend.yml
@@ -4,7 +4,7 @@ metadata:
   name: frontend
   namespace: roboshop
 spec:
-  type: Loadbalancer
+  type: LoadBalancer
   selector:
     appName: frontend
   ports:
