--- a/cart.yml
+++ b/cart.yml
@@ -24,7 +24,7 @@ spec:
       image: public.ecr.aws/w8x4g9h7/roboshop-v3/cart
       env:
         - name: CATALOGUE_HOST
-          value: "catalogue.dev.adevops.click"
+          value: "catalogue"
         - name: CATALOGUE_PORT
           value: "8080"
         - name: REDIS_HOST
